@@ -2,6 +2,7 @@
     - Add example/api.pl6 to demonstrate returning JSON.
     - Add test to skeleton created by --new, move application to bin/.
     - Add experimental code, example, and test for gradual serving. #120
+    - Change the way 'bailador --new" accepts its parameter. Eliminate duplicate usage. #156.
 
 0.0.5 2017.06.16
     - Ticket #158 - passing perl6 include lib directory downstream
